--- a/Genre_classifier.ipynb
+++ b/Genre_classifier.ipynb
@@ -3358,13 +3358,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Для базовых моделей будем использовать `LogisticRegression` и `RandomForestClassifier`, эти модели выбраны для обзора распределения признаков. Основной моделью будет модель градиентного бустинга `CatBoost`, как одна из лучших моделей для решения задачи мультиклассификации. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Рассмотрим долю жанров в датасете"
    ]
   },
@@ -3785,6 +3778,20 @@
    "metadata": {},
    "source": [
     "## Baseline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Модели"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для базовых моделей будем использовать `LogisticRegression` и `RandomForestClassifier`, эти модели выбраны для обзора распределения признаков. Основной моделью будет модель градиентного бустинга `CatBoost`, как одна из лучших моделей для решения задачи мультиклассификации. "
    ]
   },
   {
@@ -4440,11 +4447,103 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Цель исследования**\n",
+    "\n",
+    "Разработать модель, позволяющую классифицировать музыкальные произведения по жанрам.\n",
+    "\n",
+    "**Задачи:**\n",
+    "\n",
+    "- загрузка и ознакомление с данными;\n",
+    "- предварительная обработка;\n",
+    "- EDA;\n",
+    "- разработка новых синтетических признаков,\n",
+    "- проверка на мультиколлинеарность,\n",
+    "- отбор финального набора обучающих признаков,\n",
+    "- выбор и обучение моделей,\n",
+    "- итоговая оценка качества предсказания лучшей модели,\n",
+    "- анализ важности ее признаков.\n",
+    "\n",
+    "**Подготовка данных**\n",
+    "\n",
+    "Выполнено преобразование типов данных, синтезирован новый признак который использовался в моделе `duration_class`, а также произведено явное преобразование данных. Выявлены явные и неявные дубликаты, выполнен анализ аномальных значений в данных.\n",
+    "\n",
+    "\n",
+    "**Мультиколлениарность**\n",
+    "\n",
+    "Выполнено исследование исходных данных на наличие мультиколлениарности среди имеющихся регрессоров. Найденые регрессоры по средством оценки вздутия дисперсии и значений корреляций Пирсона и Спирмана, которые в последствие не вошли в обучающую выборку (`loudness`, `danceability`, `acousticness`, `valence` `energy` и `duration_ms`)\n",
+    "\n",
+    "\n",
+    "**Выбор модели**\n",
+    "\n",
+    "Для базовых моделей использовались `LogisticRegression` и `RandomForestClassifier`, эти модели выбраны для обзора распределения признаков. Основной моделью была модель градиентного бустинга `CatBoost`, как одна из лучших моделей для решения задачи мультиклассификации. \n",
+    "\n",
+    "**Метрика**\n",
+    "\n",
+    "**F (F beta)**\n",
+    "\n",
+    "В данной задаче была выбрана метрика F beta, так как она лучше всего подходит для оценки качества модели при решении задачи мультиклассификации.\n",
+    "\n",
+    "\n",
+    "Формула для метрики F beta ниже\n",
+    "\n",
+    "<math xmlns=\"http://www.w3.org/1998/Math/MathML\" display=\"block\">\n",
+    "  <msub>\n",
+    "    <mi>F</mi>\n",
+    "    <mi>&#x3B2;</mi>\n",
+    "  </msub>\n",
+    "  <mo>=</mo>\n",
+    "  <mo stretchy=\"false\">(</mo>\n",
+    "  <mn>1</mn>\n",
+    "  <mo>+</mo>\n",
+    "  <msup>\n",
+    "    <mi>&#x3B2;</mi>\n",
+    "    <mn>2</mn>\n",
+    "  </msup>\n",
+    "  <mo stretchy=\"false\">)</mo>\n",
+    "  <mfrac>\n",
+    "    <mrow>\n",
+    "      <mtext>precision</mtext>\n",
+    "      <mo>&#xD7;</mo>\n",
+    "      <mtext>recall</mtext>\n",
+    "    </mrow>\n",
+    "    <mrow>\n",
+    "      <msup>\n",
+    "        <mi>&#x3B2;</mi>\n",
+    "        <mn>2</mn>\n",
+    "      </msup>\n",
+    "      <mtext>precision</mtext>\n",
+    "      <mo>+</mo>\n",
+    "      <mtext>recall</mtext>\n",
+    "    </mrow>\n",
+    "  </mfrac>\n",
+    "  <mo>.</mo>\n",
+    "</math>\n",
+    "\n",
+    "\n",
+    "**Обучение моделей**\n",
+    "\n",
+    "Показатели метрик для валидационной выборки:\n",
+    "- `LogisticRegression`\n",
+    "    - F-beta 0.05\n",
+    "- `RandomForestClassifier`\n",
+    "    - F-beta 0.46\n",
+    "- `CatBoostClassifier`\n",
+    "    - F-beta 0.94\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">\n",
+    "    <b>Комментарий студента:</b> Ниже я оставил пустой pipeline, не стал в этом документе развивать его. Смысл его я понял (я так думаю), как я вижу его применение с web ui, с интерфейса я получаю от пользователя параметры которые направляю в правильном формате (для модели), для вывода прогноза. Вопрос, а могу я не использовать его? Наиболее лучшее применение (как я вижу) было бы если бы в пайпе у меня был процесс трансформации и масштабирования перетекающие в модель, но в моем варианте у меня модель не требует (а даже запрещает) выполнять OHE и масштабирование признаков, как быть?\n",
+    "\n",
+    "    P.S. Отчёт у меня явно посредственный (выводы слабы, а где-то я явно их не написал), много пришлось разгребать лишних деталей, но я безумного благодарен за эту мастерскую, я приобрел крутые навыки и в своих глазах вырос, спасибо, жду ревью-разнос!\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "markdown",
